--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,11 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
-
+      - 
+        name: Git Submodule Update
+        run: |
+          git pull --recurse-submodules
+          git submodule update --remote --recursive
       -
         name: Run tests
         run: docker-compose run --rm chirpstack-fuota-server make test
@@ -27,6 +31,11 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+      - 
+        name: Git Submodule Update
+        run: |
+          git pull --recurse-submodules
+          git submodule update --remote --recursive
       -
         name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
