--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ coverage.out
 /examples/class_c/class_c
 cmd/chirpstack-fuota-server/__debug_*
 examples/class_c/config.go
+
+#data collection
+*.json
